[fix]: missing background image

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,5 +1,5 @@
 header {
-    background-image: url(../imgs/bg-header-desktop.png);
+    background-image: url("../imgs/bg-header-desktop.png");
     background-size: 100% 100%;
     height: 40vh;
     max-width: 100%;
@@ -15,7 +15,7 @@ header {
 
 @media (max-width: 1000px) {
     header {
-        background-image: url(../imgs/bg-header-mobile.png);
+        background-image: url("../imgs/bg-header-mobile.png");
         height: 30vh;
     }
 }
